# random_walk_benchmark

./: .gitignore  README.md  benchmark_random_walk.py  conftest.py  cover_times_measurements_synthetic.py  flake.nix  graph_generator.py  graph_walker.py  pyproject.toml  pyproject_recurrent.toml  random_walks.cpp  random_walks.py  recurrent_random_walk.py  run_benchmarks.sh
benchmarks/: bench_walks.py  update_cache.py  visualize.py
cpp/: cpython_walks.c  pybind11_walks.cpp  random_walks.cpp
graphs/: generators.py
methods/: __init__.py  cpp_method.py  cpython_method.py  cython_method.py  cython_walks.pyx  igraph_method.py  numba_method.py  numpy_method.py  pybind11_method.py  pyg_method.py  python_method.py
metrics/: __init__.py  coverage.py  memory.py
scripts/: visualize.py
